<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/whitetriangle369b8d2d"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/caviar_sauce_up_to_one_teaspoon"
        app:layout_constraintEnd_toEndOf="@+id/seekBar_sauceValue"
        app:layout_constraintStart_toStartOf="@+id/seekBar_sauceValue"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dadskitchen" />

    <CheckBox
        android:id="@+id/checkBox_Prosciutto"
        android:layout_width="158dp"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:onClick="onCheckBoxClicked"
        android:text="@string/prosciutto"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <SeekBar
        android:id="@+id/seekBar_sauceValue"
        android:layout_width="323dp"
        android:layout_height="35dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="48dp"
        android:max="100"

        android:progress="50"
        android:thumbTint="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_burgerProgress" />

    <TextView
        android:id="@+id/textView_Calories"
        android:layout_width="123dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_sauceValue"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="158dp"
        android:layout_height="90dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioButton_Beef"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="0dp"
            android:onClick="OnRadioButtonClick"
            android:text="@string/beef_patty"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="28dp" />

        <RadioButton
            android:id="@+id/radioButton_Ostrich"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="0dp"
            android:onClick="OnRadioButtonClick"
            android:text="@string/ostrich_patty"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/radioButton_Lamb"
            tools:layout_editor_absoluteX="28dp" />

        <RadioButton
            android:id="@+id/radioButton_Lamb"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:onClick="OnRadioButtonClick"
            android:text="@string/lamb_patty"
            android:textSize="14sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="158dp"
        android:layout_height="61dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_Prosciutto">

        <RadioButton
            android:id="@+id/radioButton_Asiago"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:onClick="OnRadioButtonClick"
            android:text="@string/asiago_cheese"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton_Creme"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:onClick="OnRadioButtonClick"
            android:text="@string/creme_fraiche"
            android:textSize="14sp" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView_burgerProgress"
        android:layout_width="0dp"
        android:layout_height="139dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="59dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/baconburger" />

</androidx.constraintlayout.widget.ConstraintLayout>